--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "version": "0.1.2",
-  "name": "lottie-mini",
+  "name": "lottie-minify",
   "author": "ahaoboy",
-  "module": "dist/lottie-mini.esm.js",
+  "module": "dist/lottie-minify.esm.js",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
   "license": "MIT",
