--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lottie-minify",
-  "version": "0.1.7",
+  "version": "0.1.8",
   "author": "ahaoboy",
   "module": "dist/lottie-minify.esm.js",
   "main": "dist/index.js",
@@ -51,6 +51,7 @@
   "keywords": [
     "lottie",
     "lottie compression",
+    "lottie json compression",
     "lottie minify"
   ],
   "licenses": [
@@ -58,5 +59,5 @@
       "type": "MIT",
       "url": "http://opensource.org/licenses/MIT"
     }
-  ],
+  ]
 }
