--- a/apps/core/package.json
+++ b/apps/core/package.json
@@ -2,7 +2,7 @@
   "name": "lottie-minify",
   "version": "0.1.9",
   "author": "ahaoboy",
-  "module": "dist/lottie-minify.esm.js",
+  "module": "dist/index.mjs",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
   "license": "MIT",
