--- a/apps/tool/package.json
+++ b/apps/tool/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@element-plus/icons-vue": "^0.2.7",
     "lottie-minify": "workspace:*",
+    "lottie-type": "workspace:*",
     "@types/lodash-es": "^4.17.6",
     "@types/path-browserify": "^1.0.0",
     "base64-arraybuffer": "^1.0.2",
