--- a/apps/type/package.json
+++ b/apps/type/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lottie-minify",
+  "name": "lottie-type",
   "version": "0.1.9",
   "author": "ahaoboy",
   "module": "dist/index.mjs",
@@ -13,8 +13,8 @@
     "node": ">=10"
   },
   "scripts": {
-    "dev": "tsup --watch",
-    "build": "tsup",
+    "dev": "tsc --watch",
+    "build": "tsc",
     "pub": "npm publish"
   },
   "prettier": {
@@ -22,9 +22,6 @@
     "semi": true,
     "singleQuote": true,
     "trailingComma": "es5"
-  },
-  "dependencies": {
-    "lottie-type": "workspace:*"
   },
   "devDependencies": {
     "husky": "^5.2.0",
